fix bug team profile alignment

--- a/src/features/user-group/styles/brand.less
+++ b/src/features/user-group/styles/brand.less
@@ -17,8 +17,8 @@
 }
 
 .member {
-  display: inline-block;
-  align-items: center;
+  // display: inline-block;
+  display: inline-flex;
   margin-right: 2px;
   cursor: pointer;
 
@@ -28,12 +28,12 @@
 }
 
 .avatar {
-  display: inline-flex;
+  // display: inline-flex;
 
-  > img,
-  div {
-    cursor: pointer !important;
-  }
+  // > img,
+  // div {
+  //   cursor: pointer !important;
+  // }
 }
 
 .menuTab {
